# Elements-of-programming-interviews-practice-questions

./: pyproject.toml  readme.md
Binary search/: binary_search.py  test.py
LinkedList/: linkedList.py  merge_two_sorted_list.py  reverse_likedlist.py
Primitive types/: bitwise_operator.py  count_no_of_bits.py  decimal_to_binary.py  parity_check.py  rectangle_intersection.py  swap_bits.py
Stack/: baseball_game.py  min_stack.py  stack.py  valid_parentheses.py
array/: concatenation_of_array.py  even_odd_array.py  missing_number.py  remove_duplicates_from_sorted_array.py  remove_element.py  static_array.py
