[tool.poetry]
name = "elements-of-programming-interviews-practice-questions"
version = "0.1.0"
description = ""
authors = ["ShreyaaChauhan <shreyachauhan1113@gmail.com>"]
readme = "README.md"
packages = [{include = "elements_of_programming_interviews_practice_questions"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
